<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.tfminecraft</groupId>
    <artifactId>armourshop</artifactId>
    <version>1.1.2</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Same layout as Workspace/guides (Guidebook) -->
        <tfmc.refs>D:/Documents/TFMC/ReferenceLibs</tfmc.refs>
        <tfmc.builds>D:/Documents/TFMC/Builds/ArmourShop</tfmc.builds>
        <tfmc.tlibs>D:/Documents/TFMC/Builds/TLibs</tfmc.tlibs>
    </properties>

    <dependencies>
        <dependency>
            <groupId>local</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.8</version>
            <scope>system</scope>
            <systemPath>${tfmc.refs}/spigot-api.jar</systemPath>
        </dependency>
        <!-- Bungee chat API (click/hover) — same as Guides; provided by Spigot at runtime -->
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-chat</artifactId>
            <version>1.20-R0.1</version>
            <scope>system</scope>
            <systemPath>${tfmc.refs}/BungeeCord.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local</groupId>
            <artifactId>TLibs</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${tfmc.tlibs}/TLibs.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local</groupId>
            <artifactId>ItemsAdder</artifactId>
            <version>3.5.0</version>
            <scope>system</scope>
            <systemPath>${tfmc.refs}/ItemsAdder_3.5.0-r2.jar</systemPath>
        </dependency>
        <!-- Compile-time only; LuckPerms plugin provides API at runtime -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>luckperms-api</artifactId>
            <version>5.4</version>
            <scope>system</scope>
            <systemPath>${tfmc.refs}/api-5.4.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local</groupId>
            <artifactId>MMOItems</artifactId>
            <version>6.10</version>
            <scope>system</scope>
            <systemPath>${tfmc.refs}/MMOItems-6.10.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>local</groupId>
            <artifactId>MythicLib</artifactId>
            <version>1.7</version>
            <scope>system</scope>
            <systemPath>${tfmc.refs}/MythicLib-1.7.jar</systemPath>
        </dependency>
        <!-- Pack 3D writers (also provided by Spigot at runtime) -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <!-- Compile-time only; jar lives with server plugins (not in ReferenceLibs) -->
        <dependency>
            <groupId>local</groupId>
            <artifactId>GunsAndGadgets</artifactId>
            <version>1.0.3</version>
            <scope>system</scope>
            <systemPath>D:/Documents/TFMC/Builds/GunsAndGadgets/gunsandgadgets-1.0.3.jar</systemPath>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>run</goal></goals>
                        <configuration>
                            <target>
                                <mkdir dir="${tfmc.builds}"/>
                                <copy file="${project.build.directory}/${project.build.finalName}.jar"
                                    tofile="${tfmc.builds}/${project.build.finalName}.jar"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
